# microserver

./: makeproj.sh
projects/: CMakeLists.txt
projects/src/: index.sh
projects/src/test/: CMakeLists.txt  client.cpp  coro.cpp  coro.h  handler.cpp  handler.h  server.cpp
projects/src/util/: CMakeLists.txt  testepoll.cpp  testepoll.h
templates/: CMakeLists.txt
templates/src/test/: CMakeLists.txt
templates/src/util/: CMakeLists.txt  util.c
