CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT (TEST)

ADD_DEFINITIONS(-g -DTIXML_USE_STL)

INCLUDE_DIRECTORIES(
    ${PROJECT_SOURCE_DIR}/include
)

LINK_DIRECTORIES(
    #${PROJECT_SOURCE_DIR}/lib
)


SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

ADD_SUBDIRECTORY(src/util)
ADD_SUBDIRECTORY(src/test)
